<resources>

    <string name="app_name">PaintPaint</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">PaintPaint</string>
    <string name="buttonOpen">Open</string>
    <string name="buttonNew">Start</string>
    <string name="title_activity_canvas">PaintPaint</string>
    <string name="title_activity_open_file">PaintPaint</string>
    <string name="canvasSaveMenuItem">Save</string>
	<string name="canvasShareMenuItem">Share</string>
	<string name="canvasBrushMenuItem">Brush Settings</string>
	<string name="canvasClearMenuItem">Clear Canvas</string>
	<string name="ok">Done</string>
	<string name="cancel">Cancel</string>
	<string name="brush_settings_title">Brush Settings</string>
	<string name="brush_size">Brush Size</string>
	<string name="brush_setting_size">Size</string>
	<string name="brush_setting_red">Red</string>
	<string name="brush_setting_green">Green</string>
	<string name="brush_setting_blue">Blue</string>
	<string name="brush_setting_dabs">Steps Between Brush Dabs</string>
	<string name="paintpaint_logo">PaintPaint Logo</string>
</resources>
