
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/brush_settings_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_setting_size"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/brush_setting_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_setting_red"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/brush_setting_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_setting_green"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/brush_setting_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_setting_blue"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/brush_setting_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_setting_dabs"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/brush_setting_dabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="120"
            />

    </LinearLayout>
