<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >
	
    	<ImageView
    	    android:id="@+id/image_view"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="3dp"
    	    android:adjustViewBounds="true"
    	    android:maxHeight="400dp"
    	    android:maxWidth="400dp"
    	    android:paddingTop="10dp"
    	    android:paddingBottom="50dp"
    	    android:scaleType="fitCenter"
    	    android:src="@drawable/logo"
    	    android:contentDescription="@string/paintpaint_logo"/>
    
		<!-- Percentage width technique from http://stackoverflow.com/questions/4961355/percentage-width-in-a-relativelayout -->

        <Button
            android:id="@+id/buttonNew"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0"
            android:onClick="launchNewCanvas"
            android:text="@string/buttonNew" />

        <Button
            android:id="@+id/buttonOpen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0"
            android:onClick="launchOpenFile"
            android:text="@string/buttonOpen" />
    
</LinearLayout>
